--- a/task 1.html
+++ b/task 1.html
@@ -72,7 +72,7 @@
 <body>
     <h1 style="color:blue ;background-color:aqua; text-align: center;">ANGULAR DASHBOARD</h1>
     
-    <img src="assets/angular.png" alt="Angular"  >
+    <img src="assets/Angular.png" alt="Angular"  >
    
     <p>
         Angular is a platform and framework for building single-page client applications using HTML
